Update and rename extract_radiomics.ipynb to scripts/extract_radiomics.ipynb

--- a/scripts/extract_radiomics.ipynb
+++ b/scripts/extract_radiomics.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = os.path.abspath(\"/raid/nfs4/home/liuz14/projects/thyroid/radiomics/Radiomics-Features-Extractor/Hand-crafted-radiomics/method-1/tumor.yaml\")"
+    "params = os.path.abspath(\"tumor.yaml\")"
    ]
   },
   {
