--- a/scripts/extract_radiomics.ipynb
+++ b/scripts/extract_radiomics.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thyroid_mask = sorted(glob.glob(\"/raid/data/yanglab/T/surgery/mask/*\"))"
+    "thyroid_mask = sorted(glob.glob(\"mask/*\"))"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thyroid_img = sorted(glob.glob(\"/raid/data/yanglab/T/surgery/img/*/*\"))"
+    "thyroid_img = sorted(glob.glob(\"img/*/*\"))"
    ]
   },
   {
