--- a/scripts/feature_study.ipynb
+++ b/scripts/feature_study.ipynb
@@ -191,9 +191,7 @@
     "### combine tsne and clinic\n",
     "idx_list=[]\n",
     "auc_list=[]\n",
-    "#for i in range(100):\n",
-    "i=89\n",
-    "rf = RandomForestClassifier(random_state=i)\n",
+    "rf = RandomForestClassifier(random_state=89)\n",
     "x_combine = pd.merge(x_tsne,df_clinic, on='basename',how='left')\n",
     "prob_list=[]\n",
     "label_list=[]\n",
