--- a/scripts/extract_radiomics.ipynb
+++ b/scripts/extract_radiomics.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os  # needed navigate the system to get the input data\n",
+    "import os \n",
     "import glob\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -15,7 +15,7 @@
     "from radiomics.featureextractor import RadiomicsFeatureExtractor # This module is used for interaction with pyradiomic\n",
     "import logging\n",
     "import pandas as pd\n",
-    "logging.getLogger('radiomics').setLevel(logging.CRITICAL + 1)  # this tool makes a whole TON of \n",
+    "logging.getLogger('radiomics').setLevel(logging.CRITICAL + 1)  \n",
     "import SimpleITK"
    ]
   },
