--- a/scripts/extract_radiomics.ipynb
+++ b/scripts/extract_radiomics.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = os.path.abspath(\"tumor.yaml\")"
+    "params = os.path.abspath(\"radiomics_extractor.yaml\")"
    ]
   },
   {
